--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,4 @@ scoreThreshold=0
 dmtiAddressDetailsLimit=50
 
 
-spring.cache.jcache.config=classpath:ehcache.xml
+spring.cache.jcache.config=classpath:src\main\resources\ehcache.xml
